# bazel-mystery

./: .gitignore  README.md  solution_walkthrough.md
.github/workflows/: ci.yml
car/: BUILD.bazel  README.md
cars/: BUILD.bazel  README.md
crime_scene_report/: BUILD  README.md
crime_scene_reports/: README.md
interview/: 565673.sh  BUILD
interviews/: 454235.sh  BUILD  README.md
people/: BUILD  README.md
person/: BUILD  README.md
solution/: BUILD.bazel  solution.sh
