# Copyright (c) 2022, salesforce.com, inc.
# All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause
# For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause

sh_library(
  name = "74383",
  tags = [
    "blue",
  ],
  visibility = ["//visibility:public"],
)

sh_library(
  name = "23245",
  tags = [
    "red",
  ],
  visibility = ["//visibility:public"],
)

sh_library(
  name = "85465",
  tags = [
    "red",
    "fast",
  ],
  visibility = ["//visibility:public"],
)
